[package]
name = "dot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
camino = "1.0"
chrono = "0.4"
clap = {version="3.1", features=["derive"]}
env_logger = "0.9.0"
human_bytes = "0.3.1"
log = "0.4.17"
rayon = "1.5.3"
walkdir = "2.3.2"
